# cmake

./: grap.odt  output of cmake.odt
a/: CMakeLists.txt  demo.cpp  grap
b/: CMakeLists.txt  grap
b/src/: demo.cpp
c/example/: CMakeLists.txt~
d/: CMakeLists.txt  grap  grap~
d/example/: CMakeLists.txt
e/: grap.txt
e/testbin/: testHello  testSqrt
f/: CMakeLists.txt  grap
f/core/: CMakeLists.txt
f/core/test/: testHelloSqrt.cpp
f/testbin/: testHelloSqrt
g/: CMakeLists.txt  grap
h/: grap
